app/styles/main.scss
@import 'h5bp';
@import 'fonts';
@import 'components/components';

$primary-green: #9fcc46;
$primary-orange: #f68421;
$primary-red: #f62621;
$primary-violet: #da138e;

$secondary-text: #676767;

$primary-text-size: 1.5em;
$secondary-text-size: 0.9em;

html,
body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  position: relative;
  font-family: 'robotolight', 'Helvetica', 'Arial', sans-serif;
  font-size: 16px;
  background-color: #fcfcfc;
  box-sizing: border-box;
  min-height: 100%;
}

body.open {
  overflow: hidden;
}

h1, h2 {
  margin: 0.5em 0 0 0;
}

p {
  margin: 0;
  line-height: 1.5em;
}

// Cancel out any other before styles that might of been applied.
ul li {
  &::before {
    content: '';
  }
}

p a {
  margin: -6px;
  padding: 6px;
  position: relative;
}

.app-bar {
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  overflow: hidden;
  z-index: 2;
  background: #fff;
}

.app-bar::before {
  content: '';
  height: 0.4em;
  display: block;
  background-image: linear-gradient(90deg,
    #31c5f1 0, #31c5f1 17%,
    #cfdd28 17%, #cfdd28 34%,
    #c2b59b 34%, #c2b59b 51%,
    #9fcc46 51%, #9fcc46 67%,
    #f68421 67%, #f68421 84%,
    #fdd53c 84%, #fdd53c 100%);
  width: 100%;
}

.app-toolbar {
  background: #f5f5f5;
  height: 2.5em;
  border-bottom: 1px solid #e1e1e1;
}

.headroom {
  @extend .promote-layer;
  transition: transform 200ms linear;
  position: fixed;
  display: block;
  top: 120px;
  left: 0;
  right: 0;
  background: $primary-violet;
  padding: 7px 0;
  z-index: 1;
  color: #fff;
  font-family: "foco", sans-serif;
  font-size: 1.1em;
}
.headroom--pinned {
  transform: translateY(0%);
}
.headroom--unpinned {
  transform: translateY(-100%);
}

.progress-meter {
  width: 95px;
  height: 95px;
  position: absolute;
  top: 7px;
  right: -34px;
}

.progress-percent {
  letter-spacing: -0.1em;
  font-size: 0.7em;
  position: relative;
  left: 8px;
  top: -2px;
}

.progress-meter path {
  stroke: #fff;
  transition: all 1s;
  transform: scale(0.4);
}

// Allow our buttons to have a uniform look, regardless of color. This is intended to be used
// along with one of our $color-<x> options, but can use whatever.
@mixin button($color){
  font-size: 0.9em;
  width: auto;
  color: $color;
  border: 1px solid $color;
  white-space: nowrap;
  padding: 5px 25px;
  background-color: transparent;

  &:link,
  &:visited {
    color: $color;
    text-decoration: none;
  }

  &:hover {
    background: $color;
    color: #fcfcfc;
  }
}

.exercise-status {
  button {
    @extend .btn-white;
  }

  > div {
    width: 25%;
  }

  > div,
  > h2 {
    display: inline-block;
  }

  .start-over {
    padding: 0 0 0 20px;
  }

  h2 {
    width: 48%;
    margin: 0;
    padding: 0;
    font-size: 1.1em;
    text-align: center;
  }

  .progress {
    text-align: right;
    padding: 0 20px 0 0;
  }
}

.exercise {
  > ul {
    margin: 0 auto;
    padding: 40px 10% 0 20%;
  }

  li {
    padding-left: 0;
  }

  li.exercise-question {
    list-style-type: decimal;
    padding-bottom: 30px;

    .question-answers {
      padding: 10px 0 0 0;
      margin-left: 50px;
      list-style-type: lower-alpha;
      color: $primary-violet;
      font-size: 0.9em;
      font-weight: 700;

      li {
        cursor: pointer;
        padding: 3px 0;
        width: 500px;
      }

      li.answer-selected {
        color: #000;
        position: relative;

        &:before {
          background: rgba(#000, 0.1);
          border: 1px solid rgba(#000, 0.2);
          width: 550px;
          height: 120%;
          top: -10%;
          content: ' ';
          display: block;
          position: absolute;
          left: -30px;
        }
      }
    }
  }
}

.btn-green {
  @include button($primary-green);
}

form > button.stripe-button-el {
  @include button($primary-green);
  background-image: none;
  border-radius: 0;
  box-shadow: none;
  padding: 0 25px;
  font-family: inherit;
  margin: 25px 0 0 0;

  &:not(:disabled):active {
    background-color: $primary-green;

    span {
      background-color: $primary-green;
      background-image: none;
      box-shadow: none;
    }
  }

  > span {
    font-family: inherit;
    font-size: 0.9em;
    font-weight: 600;
    text-shadow: none;
    min-height: auto !important;
    padding: 0;
    background-image: none;
    background-color: transparent;
    color: $primary-green;
    box-shadow: none;

    &:hover {
      box-shadow: none;
      color: #fff;
    }
  }
}

.btn-orange {
  @include button($primary-orange);
}

.btn-white {
  @include button(#fff);

  &:hover {
    color: #000;
  }
}

.logo-container {
  border-bottom: 0px solid #fff;

  button.app-bar-all-courses {
    @include button($primary-violet);
    float: right;
    position: absolute;
    display: block;
    top: 63px;
    right: 15px;
  }

  h1 {
    padding: 0;
    position: relative;

    &::after {
      content: '';
      width: 100%;
      display: block;
      height: 1px;
      background: rgba(#edddbe, 0.5);
      position: absolute;
    }
  }

  &::after {
    content: '';
    width: 100%;
    display: block;
    height: 1px;
    bottom: 0;
    background: #c2b59b;
  }
}

.app-toolbar::after {
  content: '';
  height: 1px;
  width: 100%;
  display: block;
}

.app-bar-container {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 40px;
  position: relative;
  -webkit-flex-direction: row;
      -ms-flex-direction: row;
          flex-direction: row;
  margin: 0 auto;
  background: #f5f5f5;
}
/* ... */

